# rust-orm-bench

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
prisma/: dev.db  schema.prisma
prisma/migrations/20221228095017_dev/: migration.sql
src/: constants.rs  diesel_benchmark.rs  lib.rs  main.rs  models.rs  prisma.rs  prisma_benchmark.rs  schema.rs  sql_benchmark.rs
